--- a/src/EasyStorage/EasyStorage.AmazonWebServices/EasyStorage.AmazonWebServices.csproj
+++ b/src/EasyStorage/EasyStorage.AmazonWebServices/EasyStorage.AmazonWebServices.csproj
@@ -2,7 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <RuntimeFrameworkVersion>2.1.0</RuntimeFrameworkVersion>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Update="Microsoft.NETCore.App" Version="2.1.0" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="AWSSDK.S3" Version="3.3.21" />
